...

    <!-- Dummy text-->
    <string name="_2_min">2 min</string>

    <!-- Routing text-->
    <string name="label_search_destination">Search Destination</string>
    <string name="label_my_location">My Location</string>
    <string name="label_directions">Directions</string>
    <string name="label_route_options">Route Options</string>
    <string name="label_default_route_options">Default route options</string>
    <string name="label_selected">• Selected</string>
    <string name="btn_go">Go</string>
    <string name="label_walk">Walk</string>
...
    <string name="invalid_name">Contain only characters (A–Z,a–z,0–9),hyphens(-),periods(.), &amp; underscores(_)</string>
    <string name="are_you_sure_want_to_delete_geofence">Are you sure you want to delete geofence?</string>
    <string name="delete">Delete</string>
    <string name="edit_geofence">Edit Geofence</string>
    <string name="label_map_style">Map Style</string>
    <string name="label_map_style_description"><![CDATA[Changing data provider also affects Places & Routes API]]></string>
    <string name="map_standard" translatable="false">Standard</string>
    <string name="map_monochrome" translatable="false">Monochrome</string>
    <string name="map_hybrid" translatable="false">Hybrid</string>
    <string name="map_satellite" translatable="false">Satellite</string>
    <string name="label_enter_identity_pool_id">Please enter proper identity pool id</string>
    <string name="label_enter_domain">Entered user domain is wrong</string>
    <string name="label_enter_user_pool_client_id">Entered user pool client id is wrong</string>
    <string name="label_enter_user_pool_id">Entered user pool id is wrong</string>
...
