...
                    android:layout_marginEnd="@dimen/dp_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cl_location_icons"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_search_direction"
                        style="@style/SearchTextMedium"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/label_search_starting_point"
...
                        android:ellipsize="end"
                        android:textDirection="locale"
                        android:gravity="end"
                        android:maxLength="200"
                        android:singleLine="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/card_drive_go"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_drive_selected"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="2 min" />

                    <com.google.android.material.card.MaterialCardView
...
